# json2docx

./: .gitignore  README.md  __init__.py  cli.py  core.py  setup.cfg
.github/workflows/: publish.yml
json2docx/: core.py
