[metadata]
name = json2docx
version = 0.1.6
author = Mioo Dev
author_email = shrbmamad@gmail.com
description = A simple tool to replace placeholders and base64 images in Word .docx templates
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mioo-dev/json2docx
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
install_requires =
    python-docx
